[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[node name="Scene" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="GUI" parent="Camera2D/CanvasLayer" instance=ExtResource( 1 )]

[node name="Background" type="Sprite" parent="."]

[node name="Rays" type="Node2D" parent="."]

[node name="Tracables" type="Node2D" parent="."]
[connection signal="add_aperture" from="Camera2D/CanvasLayer/GUI" to="." method="_on_GUI_add_aperture"]
[connection signal="add_lens" from="Camera2D/CanvasLayer/GUI" to="." method="_on_GUI_add_lens"]
[connection signal="add_omnidirectional_rays" from="Camera2D/CanvasLayer/GUI" to="." method="_on_GUI_add_omnidirectional_rays"]
[connection signal="add_parallel_rays" from="Camera2D/CanvasLayer/GUI" to="." method="_on_GUI_add_parallel_rays"]
[connection signal="add_ray" from="Camera2D/CanvasLayer/GUI" to="." method="_on_GUI_add_ray"]
[connection signal="load_save" from="Camera2D/CanvasLayer/GUI" to="." method="_on_GUI_load_save"]
[connection signal="new_board" from="Camera2D/CanvasLayer/GUI" to="." method="_on_GUI_new_board"]
[connection signal="remove_aperture" from="Camera2D/CanvasLayer/GUI" to="." method="_on_GUI_remove_aperture"]
[connection signal="remove_lens" from="Camera2D/CanvasLayer/GUI" to="." method="_on_GUI_remove_lens"]
[connection signal="remove_ray" from="Camera2D/CanvasLayer/GUI" to="." method="_on_GUI_remove_ray"]
[connection signal="reset_background" from="Camera2D/CanvasLayer/GUI" to="." method="_on_GUI_reset_background"]
[connection signal="save_as" from="Camera2D/CanvasLayer/GUI" to="." method="_on_GUI_save_as"]
[connection signal="set_background" from="Camera2D/CanvasLayer/GUI" to="." method="_on_GUI_set_background"]
